--- a/front/src/styles/UserRegister.css
+++ b/front/src/styles/UserRegister.css
@@ -1,4 +1,5 @@
-/* General dark theme styles */
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";
+
 .dark-form-container {
     background-color: #2c2f38; /* Dark background */
     color: #fff; /* White text */
